--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
             }
         }
 
-
-
-
-
         var lastName = "";
         var jData;
         var lang = window.navigator.userLanguage || window.navigator.language;
@@ -60,29 +56,37 @@
                     $("#showContent").html(processHtml(jData, lastName));
                 } else {
                     //retrive
-                    $.getJSON(jsonFile)
-                        .done(function(data) {
-                            localStorage.jData = JSON.stringify(data);
-                            jData = data;
-                            $("#showContent").html(processHtml(jData, lastName));
-                        })
-                        .fail(function(jqxhr, textStatus, error) {
-                            alert("(with webstorage) Request failed: " + error+textStatus+jqxhr);
-                            console.log("Request Failed: " + error+textStatus+jqxhr);
-                        });
+                    var jqxhr = $.getJSON(jsonFile, function() {
+                        console.log("success one, do nothing.");
+                    });
+                    jqxhr.complete(function(data) {
+                        console.log("success2, worktime! heyho lets go..");
+                        localStorage.jData = data.responseText.replace("\n","");
+                        jData = jQuery.parseJSON(data.responseText.replace("\n",""));
+                        $("#showContent").html(processHtml(jData, lastName));
+                        
+                    });
+                    //$.getJSON(jsonFile)
+                    //                        .done(function(data) {
+                    //                            localStorage.jData = JSON.stringify(data);
+                    //                            jData = data;
+                    //                            $("#showContent").html(processHtml(jData, lastName));
+                    //                        })
+                    //                        .fail(function(jqxhr, textStatus, error) {
+                    //                            alert("(with webstorage) Request failed: " + error + textStatus + jqxhr);
+                    //                            console.log("Request Failed: " + error + textStatus + jqxhr);
+                    //                        });
                 }
             } else {
                 // Sorry! No Web Storage support..
-                $.getJSON(jsonFile)
-                    .done(function(data) {
-                        jData = jQuery.parseJSON(JSON.stringify(data));
-                        $("#showContent").html(processHtml(jData, lastName));
-                    })
-                    .fail(function(jqxhr, textStatus, error) {
-                        alert("(withouth webstorage) Request failed: " + error+textStatus+jqxhr);
-                        console.log("Request Failed: " + error+textStatus+jqxhr);
+                    var jqxhr = $.getJSON(jsonFile, function() {
+                        console.log("success one, do nothing.");
                     });
-
+                    jqxhr.complete(function(data) {
+                        console.log("success2, worktime! heyho lets go..");
+                        jData = jQuery.parseJSON(data.responseText.replace("\n",""));
+                        $("#showContent").html(processHtml(jData, lastName));
+                    });
             }
             $("#showContent").fadeIn(1000);
             $("#menu").fadeIn(1000);
