--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta charset='utf-8'>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <script src="js/ownScript.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
     <title>skamster.github.io</title>
     <script type="text/javascript">
-        HTTP_GET_VARS = new Array();
-        strGET = document.location.search.substr(1, document.location.search.length);
+        "use strict";
+        var HTTP_GET_VARS = new Array();
+        var strGET = document.location.search.substr(1, document.location.search.length);
         if (strGET != '') {
-            gArr = strGET.split('&');
-            for (i = 0; i < gArr.length; ++i) {
-                v = '';
-                vArr = gArr[i].split('=');
+            var gArr = strGET.split('&');
+            for (var i = 0; i < gArr.length; ++i) {
+                var v = '';
+                var vArr = gArr[i].split('=');
                 if (vArr.length > 1) {
                     v = vArr[1];
                 }
@@ -61,36 +63,32 @@
                     });
                     jqxhr.complete(function(data) {
                         console.log("success2, worktime! heyho lets go..");
-                        localStorage.jData = data.responseText.replace("\n","");
-                        jData = jQuery.parseJSON(data.responseText.replace("\n",""));
+                        localStorage.jData = data.responseText.replace("\n", "");
+                        jData = jQuery.parseJSON(data.responseText.replace("\n", ""));
                         $("#showContent").html(processHtml(jData, lastName));
-                        
+
                     });
-                    //$.getJSON(jsonFile)
-                    //                        .done(function(data) {
-                    //                            localStorage.jData = JSON.stringify(data);
-                    //                            jData = data;
-                    //                            $("#showContent").html(processHtml(jData, lastName));
-                    //                        })
-                    //                        .fail(function(jqxhr, textStatus, error) {
-                    //                            alert("(with webstorage) Request failed: " + error + textStatus + jqxhr);
-                    //                            console.log("Request Failed: " + error + textStatus + jqxhr);
-                    //                        });
                 }
             } else {
                 // Sorry! No Web Storage support..
-                    var jqxhr = $.getJSON(jsonFile, function() {
-                        console.log("success one, do nothing.");
-                    });
-                    jqxhr.complete(function(data) {
-                        console.log("success2, worktime! heyho lets go..");
-                        jData = jQuery.parseJSON(data.responseText.replace("\n",""));
-                        $("#showContent").html(processHtml(jData, lastName));
-                    });
+                var jqxhr = $.getJSON(jsonFile, function() {
+                    console.log("success one, do nothing.");
+                });
+                jqxhr.complete(function(data) {
+                    console.log("success2, worktime! heyho lets go..");
+                    jData = jQuery.parseJSON(data.responseText.replace("\n", ""));
+                    $("#showContent").html(processHtml(jData, lastName));
+                });
             }
             $("#showContent").fadeIn(1000);
             $("#menu").fadeIn(1000);
+
         });
+        $("#aboutImg").hover(
+            function() {
+                $(this).animate($(this).css("filter", "grayscale('0'%)"), 3000);
+            }
+        );
 
         function changeContent(name) {
             if (history.pushState) {
@@ -129,6 +127,7 @@
                     <a href="index.html?s=about" onclick="changeContent('about'); return false" class="btn fade">About me</a>
                     <a target="_blank" href="https://github.com/skamster" class="btn btn-github fade">
                         <span class="icon"></span>View on GitHub</a>
+                    <a href="#" style="float:right;" onclick="updateContent(); return false"  class="ui-btn ui-icon-delete ui-btn-icon-notext ui-corner-all">No text</a>
                     <a style="float:right;" href="#" onclick="updateContent(); return false" class="btn fade">Refresh</a>
                     <a style="float:right;" href="index.html?lang=de" class="btn fade">DE</a>
                     <a style="float:right;" href="index.html?lang=en" class="btn fade">ENG</a>
