--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <a style="margin-left:5px;" href="index.html?s=index" onclick="changeContent('index'); return false" class="btn fade">Home</a>
                     <a href="index.html?s=about" onclick="changeContent('about'); return false" class="btn fade">About me</a>
                     <a target="_blank" href="https://github.com/skamster" class="btn btn-github fade">My GitHub</a>
-                    <a style="float:right; margin-right: 5px;" href="#" onclick="updateContent(); location.reload(); return false" class="btn fade">Refresh</a>
+                    <a style="float:right; margin-right: 5px;" href="#" onclick="updateContent(reload=true); return false" class="btn fade">Refresh</a>
                     <a style="float:right; margin-right: 5px;" href="index.html?lang=de" class="btn fade">DE</a>
                     <a style="float:right; margin-right: 5px;" href="index.html?lang=en" class="btn fade">ENG</a>
                 </section>
