modify header and refactor menu

--- a/index.html
+++ b/index.html
@@ -116,18 +116,16 @@
 
 <body>
     <header>
-        <div class="container" style="display: none;" id="menu">
-            <div id="menucontent">
-                <h1>skamster.github.io</h1>
+            <div style="display: none;" id="menu">
+                <span style="display: inline; vertical-align: top;"><h1 style="display: inline; vertical-align: top;">skamster.github.io</h1><p style="display: inline; vertical-align: top;"> docs, projects and personal infos</p></span>
                 <section id="downloads">
                     <a style="margin-left:5px;" href="index.html?s=index" onclick="changeContent('index'); return false" class="btn fade">Home</a>
                     <a href="index.html?s=about" onclick="changeContent('about'); return false" class="btn fade">About me</a>
                     <a target="_blank" href="https://github.com/skamster" class="btn btn-github fade">My GitHub</a>
                     <a style="float:right; margin-right: 5px;" href="#" onclick="updateContent(reload=true); return false" class="btn fade">Refresh</a>
                     <a style="float:right; margin-right: 5px;" href="index.html?lang=de" class="btn fade">DE</a>
-                    <a style="float:right; margin-right: 5px;" href="index.html?lang=en" class="btn fade">ENG</a>
+                    <a style="float:right; margin-right: 5px;" href="index.html?lang=en" class="btn fade">EN</a>
                 </section>
-            </div>
         </div>
     </header>
     <div id="animationContainer">
