fix loose of onclick aboutimage (my personal picture)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             $("#menu").fadeIn(1000);
 
             
-            $("#aboutImg").click(function() {
+            $(document).on('click', '#aboutImg', function(e) {
                 if (aboutImgBig) {
                     $("#aboutImg").animate({
                             width: '213px',
