Many changes, bouncing pictures, a first toc, improved menustyle, updated text...

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
 
         });
+        
     
     </script>
 </head>
@@ -119,12 +120,12 @@
             <div style="display: none;" id="menu">
                 <span style="display: inline; vertical-align: top;"><h1 style="display: inline; vertical-align: top;">skamster.github.io</h1><p style="display: inline; vertical-align: top;"> docs, projects and personal infos</p></span>
                 <section id="downloads">
-                    <a style="margin-left:5px;" href="index.html?s=index" onclick="changeContent('index'); return false" class="btn fade">Home</a>
-                    <a href="index.html?s=about" onclick="changeContent('about'); return false" class="btn fade">About me</a>
-                    <a target="_blank" href="https://github.com/skamster" class="btn btn-github fade">My GitHub</a>
-                    <a style="float:right; margin-right: 5px;" href="#" onclick="updateContent(reload=true); return false" class="btn fade">Refresh</a>
-                    <a style="float:right; margin-right: 5px;" href="index.html?lang=de" class="btn fade">DE</a>
-                    <a style="float:right; margin-right: 5px;" href="index.html?lang=en" class="btn fade">EN</a>
+                    <a style="margin-left:5px;" href="index.html" onclick="changeContent('index'); return false" class="btn fade">Home</a>
+                    <a href="index.html?s=about" data-tool="Some informations about me and my expirience" onclick="changeContent('about'); return false" class="btn tooltip fade">About me</a>
+                    <a target="_blank" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">My GitHub</a>
+                    <a style="float:right; margin-right: 5px;" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(reload=true); return false" class="btn fade tooltip ">Refresh</a>
+                    <a style="float:right; margin-right: 5px;" data-tool="Wechsle zu deutschem Inhalt" href="index.html?lang=de" class="btn fade tooltip">DE</a>
+                    <a style="float:right; margin-right: 5px;" data-tool="Change to english content" href="index.html?lang=en" class="btn fade tooltip">EN</a>
                 </section>
         </div>
     </header>
