--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
                 } else {
                     $("#aboutImg").animate({
-                            width: '430px',
-                            height: '320px'
+                            width: '416px',
+                            height: '310px'
                         }, 500,
                         function() {
                             aboutImgBig = true;
@@ -124,11 +124,11 @@
 
                 </span>
                 <span style="display:inline-block;">
-                                    <a target="_blank" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">My GitHub</a>
+                                    <a target="_blank" style="margin-right:1px;" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">My GitHub</a>
                 
-                                    <a style="float:right; margin-right: 2px;" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
-                    <a style="float:right; margin-right: 2px;" data-tool="Wechsle zu deutschem Inhalt" href="index.html?lang=de" class="btn fade tooltip">DE</a>
-                    <a style="float:right; margin-right: 2px;" data-tool="Change to english content" href="index.html?lang=en" class="btn fade tooltip">EN</a>
+                                    <a style="float:right; margin-right: 1px;" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
+                    <a style="float:right; margin-right: 1px;" data-tool="Wechsle zu deutschem Inhalt" href="index.html?lang=de" class="btn fade tooltip">DE</a>
+                    <a style="float:right;" data-tool="Change to english content" href="index.html?lang=en" class="btn fade tooltip">EN</a>
                     </span>
                     </span>
         </div>
