updates in style and text

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 <body>
     <header>
             <div style="display: none;" id="menu">
-                <span style="display: inline; vertical-align: top;"><h1 style="display: inline; vertical-align: top;">skamster.github.io</h1><p style="display: inline; vertical-align: top;"> docs, projects and personal infos</p></span>
+                <span style="display: inline; vertical-align: top;"><h1 style="display: inline; vertical-align: top;">skamster.github.io</h1><p style="display: inline; vertical-align: top;"> docs, projects and personal infos<a name="top" /></p></span>
                 <span style="display:inline-block;">
                 <span id="menucontent" style="display:inline-block;">
-
+                
                 </span>
                 <span style="display:inline-block;">
                                     <a target="_blank" style="margin-right:1px;" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">My GitHub</a>
@@ -133,10 +133,11 @@
                     </span>
         </div>
     </header>
+    <div style="float: left; width: 100px;" id="info">Test!</div>
     <div id="animationContainer">
         <div id="showContent" style="display: none"></div>
     </div>
-
+    <a href="#top">Go onTop!</a>
 </body>
 
 </html>
