add custom onTop-image by wacom.. is a first productive try..

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h3>Diese Seite braucht Javascript, um ihre Inhalte zu laden.</h3>
         <p>Wenn Sie kein Risiko eingehen wollen, werfen Sie einen Blick auf <a href="https://github.com/skamster/skamster.github.io/">skamster.github.io @ github</a>. Überprüfen Sie die Seite dort auf Malware/schädlichen Code, es wird von meinem Code nichts ausgeführt. Ansonsten können Sie meine github-seite besuchen und dort in den Wikis stöbern..Dokumentationen: <ul><li><a href="petaDocs/">Peta</a></li><li><a href="tryToxicDocs/">tryToxic</a></li><li><a href="jobManagementDocs/">jobManagement</a></li></ul></p>
     </noscript>
-    <div id="top"><a href="#onTop">Go onTop!</a></div>
+    <div id="top"><a href="#onTop"><img src="images/onTop.png" /></a></div>
 </body>
 
 </html>
