--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <script src="js/ownScript.js" type="text/javascript"></script>
     <script src="js/lightbox.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link title="Default" rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link title="Serious" rel="alternate stylesheet" type="text/css" href="stylesheets/serious.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
