--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <script src="js/ownScript.js" type="text/javascript"></script>
-    <script src="js/lightbox.js" type="text/javascript"></script>
+    <script src="js/jquery.fancybox.js" type="text/javascript"></script>
+    <script src="js/jquery.mousewheel-3.0.6.pack.js" type="text/javascript"></script>
     <link title="Spaced" rel="alternate stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link title="Serious" rel="stylesheet" type="text/css" href="stylesheets/serious.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/jquery.fancybox.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
     <title>skamster.github.io</title>
     <script type="text/javascript">
@@ -54,6 +55,8 @@
                     jsonFile = GET('lang') + ".json";
                 }
             }
+            
+            $('.gallerybox').fancybox();
             var menuYloc = parseInt($("#scroller").css("top").substring(0, $("#scroller").css("top").indexOf("px")));
             $(window).scroll(function() {
                 if (isNaN(menuYloc)) {
